fix role permission
